[project]
name = "traffic_stops"
version = "1.23.0"
description = "Website to monitor and identify racial profiling practices by North Carolina law enforcement agencies"
readme = "README.rst"
requires-python = "~=3.12.0"
dependencies = [
    "amqp==5.3.1",
    "anyio==4.8.0",
    "asgiref==3.8.1",
    "billiard==4.2.1",
    "boto==2.49.0",
    "boto3==1.39.2",
    "botocore==1.39.2",
    "brotli==1.1.0",
    "celery==5.4.0",
    "census==0.8.24",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "dealer==2.1.0",
    "dj-database-url==2.3.0",
    "django==4.2.18",
    "django-ckeditor-5==0.2.15",
    "django-click==2.4.0",
    "django-crispy-forms==2.3",
    "django-dotenv==1.4.2",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "django-memoize==2.3.1",
    "django-pgviews-redux==0.11.0",
    "django-redis==5.4.0",
    "django-storages==1.14.4",
    "djangorestframework==3.15.2",
    "drf-extensions==0.7.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httpx[http2]==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jellyfish==1.1.3",
    "jmespath==1.0.1",
    "kombu==5.4.2",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "prompt-toolkit==3.0.50",
    "psycopg2==2.9.10",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "s3transfer==0.13.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "us==3.2.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "whitenoise==6.9.0",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | env
  | htmlcov
  | node_modules
  | public
  | venv
  | migrations
)/
'''

[tool.isort]
py_version = 38
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
lines_between_types = 1
src_paths = [ "nc", "traffic_stops", "tsdata" ]

[dependency-groups]
deploy = [
    "certifi==2025.1.31",
    "newrelic==10.14.0",
    "python3-memcached==1.51",
    "sentry-sdk==2.32.0",
    "urllib3==2.3.0",
    "uwsgi==2.0.30",
]
dev = [
    "alabaster==0.7.16",
    "annotated-types==0.7.0",
    "ansible==10.7.0",
    "ansible-core==2.17.8",
    "anyio==4.8.0",
    "appnope==0.1.4",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "awscli==1.41.2",
    "babel==2.17.0",
    "black==25.1.0",
    "boto3==1.39.2",
    "botocore==1.39.2",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "cfn-flip==1.3.0",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "coverage[toml]==7.6.11",
    "cryptography==44.0.0",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "django==4.2.18",
    "django-debug-toolbar==5.0.1",
    "docutils==0.19",
    "durationpy==0.9",
    "executing==2.2.0",
    "factory-boy==3.3.3",
    "faker==36.0.0",
    "filelock==3.17.0",
    "flake8==7.1.1",
    "google-auth==2.38.0",
    "h11==0.14.0",
    "identify==2.6.7",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.0.0",
    "invoke==2.2.0",
    "invoke-kubesae==0.1.0",
    "ipython==8.32.0",
    "isort==6.0.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jmespath==1.0.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kubernetes==32.0.0",
    "kubernetes-validate==1.33.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "oauthlib==3.2.2",
    "openshift==0.13.2",
    "packaging==24.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pre-commit==4.1.0",
    "prompt-toolkit==3.0.50",
    "ptyprocess==0.7.0",
    "pudb==2024.1.3",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyflakes==3.2.0",
    "pygments==2.19.1",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "python-dateutil==2.9.0.post0",
    "python-string-utils==1.0.0",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "resolvelib==1.0.1",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.7.2",
    "rstcheck==6.2.4",
    "rstcheck-core==1.2.1",
    "s3transfer==0.13.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sphinx==5.3.0",
    "sphinx-autobuild==2024.10.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.45.3",
    "traitlets==5.14.3",
    "troposphere==4.9.0",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "urwid==2.6.16",
    "urwid-readline==0.15.1",
    "uvicorn==0.34.0",
    "virtualenv==20.29.1",
    "watchfiles==1.0.4",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==14.2",
    "wheel==0.45.1",
]
