[project]
name = "traffic_stops"
version = "1.23.0"
description = "Website to monitor and identify racial profiling practices by North Carolina law enforcement agencies"
readme = "README.rst"
requires-python = "~=3.12.0"
dependencies = [
    "boto==2.49.0",
    "boto3==1.39.2",
    "botocore==1.39.2",
    "brotli==1.1.0",
    "celery==5.4.0",
    "census==0.8.24",
    "click==8.1.7",
    "dealer==2.1.0",
    "dj-database-url==2.3.0",
    "django==4.2.18",
    "django-ckeditor-5==0.2.15",
    "django-click==2.4.0",
    "django-crispy-forms==2.3",
    "django-dotenv==1.4.2",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "django-memoize==2.3.1",
    "django-pgviews-redux==0.11.0",
    "django-redis==5.4.0",
    "django-storages==1.14.4",
    "djangorestframework==3.15.2",
    "drf-extensions==0.7.1",
    "httpx[http2]==0.28.1",
    "pandas==2.2.3",
    "psycopg2==2.9.10",
    "requests==2.32.3",
    "six==1.17.0",
    "urllib3==2.3.0",
    "us==3.2.0",
    "vine==5.1.0",
    "whitenoise==6.9.0",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | env
  | htmlcov
  | node_modules
  | public
  | venv
  | migrations
)/
'''

[tool.isort]
py_version = 38
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
lines_between_types = 1
src_paths = [ "nc", "traffic_stops", "tsdata" ]

[dependency-groups]
deploy = [
    "newrelic==10.14.0",
    "python3-memcached==1.51",
    "sentry-sdk==2.32.0",
    "uwsgi==2.0.30",
]
dev = [
    "ansible==10.7.0",
    "appnope==0.1.4",
    "awscli==1.41.2",
    "black==25.1.0",
    "cffi==1.17.1",
    "coverage>=7.10.4",
    "cryptography==44.0.0",
    "django-debug-toolbar==5.0.1",
    "factory-boy==3.3.3",
    "flake8==7.1.1",
    "identify==2.6.7",
    "invoke-kubesae==0.1.0",
    "ipython==8.32.0",
    "isort==6.0.0",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "kubernetes==32.0.0",
    "kubernetes-validate~=1.32",
    "openshift==0.13.2",
    "pre-commit==4.1.0",
    "pudb==2024.1.3",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "rstcheck==6.2.4",
    "sphinx==5.3.0",
    "sphinx-autobuild==2024.10.3",
    "troposphere==4.9.0",
    "wheel==0.45.1",
]
